--- a/app/views/access/menu.html.erb
+++ b/app/views/access/menu.html.erb
@@ -3,9 +3,7 @@
 	<h2>Admin Menu</h2>
 	<div class="identity">Logged in as: <%= session[:username] %></div>
 	<ul>
-		<li><%= link_to("Manage Subjects", :controller=>"subjects") %></li>
-		<li><%= link_to("Manage Pages", :controller=>"pages") %></li>
-		<li><%= link_to("Manage Sections", :controller=>"sections") %></li>
+		<li><%= link_to("Manage Content", :controller=>"subjects") %></li>
 		<li><%= link_to("Manage Admin Users", :controller=>"admin_users") %></li>
 		<li><%= link_to("Logout", :action=>"logout") %></li>
 		<% # ak uvediem len kontroler bez akcie, tak RoR siahne be default akcii Index %>
