--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -1,8 +1,8 @@
-<% @page_title = "Page Delete"%>
-<%= link_to("<< Back to list", {:action=>"list"}, :class=>"back-link")%>
+<% @page_title = "Page Delete" %>
+<%= link_to("<< Back to list", { :action=>"list", :subject_id => @subject.id}, :class=>"back-link") %>
 <div class="page delete">
 	<h2>Delete Page</h2>
-	<%= form_for(:page, :url=>{:action=>"destroy", :id=>@page.id}) do |f| %>
+	<%= form_for(:page, :url => { :action=>"destroy", :id => @page.id, :subject_id => @subject.id } ) do |f| %>
 		<p>Are you sure you want to permanently delete this page?</p>
 		<p class="reference-name"><%= @page.name %></p>
 		<div class="form-buttons">
