--- a/app/views/sections/delete.html.erb
+++ b/app/views/sections/delete.html.erb
@@ -1,8 +1,8 @@
 <% @page_title = "Section Delete"%>
-<%= link_to("<< Back to list", {:action=>"list"}, :class=>"back-link")%>
+<%= link_to("<< Back to list", {:action=>"list", :page_id => @page.id }, :class=>"back-link")%>
 <div class="section delete">
 	<h2>Delete Section</h2>
-	<%= form_for(:section, :url=>{:action=>"destroy", :id=>@section.id}) do |f| %>
+	<%= form_for( :section, :url => { :action => "destroy", :id => @section.id, :page_id => @page.id } ) do |f| %>
 		<p>Are you sure you want to permanently delete this section?</p>
 		<p class="reference-name"><%= @section.name %></p>
 		<div class="form-buttons">
