--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,8 +1,8 @@
 <% @page_title = "Section Edit"%>
-<%= link_to("<<Back to list", {:action=>"list"}, :class=>"back-link") %>
+<%= link_to("<<Back to list", {:action=>"list", :page_id => @page.id}, :class=>"back-link") %>
 <div class="section edit">
 	<h2>Update Section</h2>
-	<%= form_for(:section, :url=> {:action=>"update", :id=>@section.id}) do |f| %>
+	<%= form_for(:section, :url=> {:action=>"update", :id=>@section.id, :page_id => @page.id }) do |f| %>
 		<%= render(:partial=>"form", :locals=>{:f=>f} )%>
 		<div class="form-buttons">
 			<%= submit_tag("Update Section") %>
