--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,8 +1,8 @@
 <% @page_title = "Section New"%>
-<%= link_to("<<Back to list", {:action=>"list"}, :class=>"back-link") %>
+<%= link_to("<<Back to list", {:action=>"list", :page_id => @page.id}, :class=>"back-link") %>
 <div class="section new">
 	<h2>Create Section</h2>
-	<%= form_for(:section, :url=> {:action=>"create"}) do |f| %>
+	<%= form_for(:section, :url=> {:action=>"create", :page_id => @page.id }) do |f| %>
 	<%= render(:partial=>"form", :locals=>{:f=>f} )%>
 		<div class="form-buttons">
 			<%= submit_tag("Create Section") %>
