--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -31,6 +31,19 @@ a.action:hover { backgrounf: #B6D492; }
 
 .list table	{ clear: both; width: 100%; }
 .list table tr td { border: 1px solid #666666; width: auto;}
+.list th .current {
+  	padding-right: 12px;
+	background-repeat: no-repeat;
+	background-position: right center;
+}
+.list th .asc {
+  	background-image: url(/images/up_arrow.gif);
+	background-color: lightgrey;
+}
+.list th .desc {
+  	background-image: url(/images/down_arrow.gif);
+	background-color: lightgrey;
+}	
 .show table	{ clear: both; margin: 0 200px; width: 300px; }
 .show table.wide { width: 600px; margin: 0 50px; }
 .show table tr th { white-space: nowrap; padding-right: 5px; }
