SortSearchPaginate on Subjects

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,7 +25,7 @@
 	</div> <!-- END DIV id="main" -->
 	<div id="footer">
 		<p id="copyright">&copy; myCMS | Michael SOPIRA</p>
-		<%#= debug(params) %>
+		<%= debug(params) %>
 	</div> <!-- END DIV id="footer" -->
 </body>
 </html>
