--- a/app/views/access/menu.html.erb
+++ b/app/views/access/menu.html.erb
@@ -4,6 +4,7 @@
 	<div class="identity">Logged in as: <%= session[:username] %></div>
 	<ul>
 		<li><%= link_to("Manage Content", :controller=>"subjects") %></li>
+		<li><%= link_to("Manage Documents", :controller=>"documents") %></li>
 		<li><%= link_to("Manage Admin Users", :controller=>"admin_users") %></li>
 		<li><%= link_to("Logout", :action=>"logout") %></li>
 		<% # ak uvediem len kontroler bez akcie, tak RoR siahne be default akcii Index %>
