--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,7 +25,10 @@
 	</div> <!-- END DIV id="main" -->
 	<div id="footer">
 		<p id="copyright">&copy; myCMS | Michael SOPIRA</p>
-		<%= debug(params) %>
 	</div> <!-- END DIV id="footer" -->
+	<%= debug(params) %>
+	<%= debug(session) %>
+	
 </body>
+
 </html>
