--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><% Simple CMS | <%= @page_title || "Admin Area" %></title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+	<title>Simple CMS | <%= @page_title || "Admin Area" %></title>
+  	<%= stylesheet_link_tag :all %>
+  	<%= javascript_include_tag :defaults %>
+  	<%= csrf_meta_tag %>
 </head>
 <body>
 
