--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,5 +1,11 @@
 <% @page_title = "Subject Show"%>
-<%= link_to("<<Back to list", {:action=>"list"}, :class=>"back-link") %>
+<%= link_to("<<Back to list", { :action=>"list", 
+								:page => session[:subject_page], 
+								:sort => session[:subject_sort], 
+								:direction => session[:subject_direction],
+								:search => session[:subject_search] }, 
+								:class => "back-link") %>
+
 <div class = "subject show">
 	<h2>Show Subject</h2>
 	<table summary="Subject detail view">
