Still working-before Subjects to Articles refactoring

--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,4 +1,13 @@
 <%= error_messages_for (@subject) %>
+
+
+<%= form_for(:subject) do |f| %>
+	<div class="field">
+    	<%= f.label :name %><br />
+    	<%= f.text_field :name %>
+  	</div>
+<% end -%>
+
 <table summary="Subject form fields">
 	<tr>
 		<th><%= f.label(:name) %></th>
