--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,51 +1,20 @@
 <% @page_title = "Page List"%>
-<%= link_to("<<Back to Subjects list", { 	:controller => "subjects",
-											:action=>"list", 
-											:page => params[:page], 
-											:sort => params[:sort], 
-											:direction => params[:direction],
-											:search => params[:search] }, 
-											:class => "back-link") %>	
+<%= link_to("<<Back to Stories list", { 	:controller => "stories",
+											:action		=> "list", 
+											:page 		=> session[:story_page], 
+											:sort 		=> session[:story_sort], 
+											:direction 	=> session[:story_direction],
+											:search 	=> session[:story_search] }, 
+											:class 		=> "back-link") %>	
 <div class="page list">
-	<h2>Pages</h2>
-	
-	<% if params[:subject_id] %>
-		<%= link_to("Add new Page", {:action=>"new", :subject_id => @subject.id }, :class=>"action new round") %>
+	<h2>Pages</h2>	
+	<% if params[:story_id] %>
+		<%= link_to("Add new Page", {:action=>"new", :story_id => @story.id }, :class=>"action new round") %>
 	<% else %>
 		<%= link_to("Add new Page", {:action=>"new" }, :class=>"action new round") %>
 	<% end %>
-	
-	<table class="list" summary="Page list">
-		<caption>Tak toto je ta moja prva caption...</caption>
-		<tr class="header">
-			<th>Pos</th>
-			<th>Page name</th>
-			<th>Visible</th>
-			<th>Actions</th>
-		</tr>
-		<% @pages.each do |page| %>
-		<tr>
-			<td><%= page.position %></td>
-			<td><%= page.name %></td>
-			<td class="center"><%= status_tag(page.visible) %></td>
-			<td class="actions">
-				<% if params[:subject_id] %>
-				<%= link_to("Show", {:action=>"show", :id => page.id, :subject_id => @subject.id}, :class=>"action show round center")       %>
-		    	<%= link_to("Edit", {:action=>"edit", :id => page.id, :subject_id => @subject.id}, :class=>"action edit round center")       %>
-		    	<%= link_to("Delete", {:action=>"delete", :id => page.id, :subject_id => @subject.id}, :class=>"action delete round center") %>
-				<%= link_to("View Sections", {:controller=>"sections", :action=>"list", 
-					:page_id => page.id}, :class=>"action show round center")%>
-				<% else %>
-				<%= link_to("Show", {:action=>"show", :id => page.id }, :class=>"action show round center")       %>
-		    	<%= link_to("Edit", {:action=>"edit", :id => page.id }, :class=>"action edit round center")       %>
-		    	<%= link_to("Delete", {:action=>"delete", :id => page.id }, :class=>"action delete round center") %>
-				<%= link_to("View Sections", {:controller=>"sections", :action=>"list"}, :class=>"action show round center")%>
-				<% end %>
-				
-
-			</td>
-		</tr>
-		<% end %>		
-	</table>
+	<%= render :partial => 'search_field_tag' %>
+	<%= render :partial => 'index_table' %>
+	<%= will_paginate @stories %>
 </div>
 	
