--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,10 @@
-<% subjects ||=[] %>
+<% stories ||=[] %>
 <ul>
-	<% subjects.each do |subject| %>
+	<% stories.each do |story| %>
 	<li>
-		<%= subject.name %>
+		<%= story.name %>
 		<ul>
-			<% subject.pages.visible.sorted.each do |page| %>
+			<% story.pages.visible.sorted.each do |page| %>
 			<li><%= link_to_unless_current(page.name, :action => "show", :id => page.permalink) %></li>
 			<% end %>
 		</ul>
