--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,8 +1,8 @@
 <% @page_title = "Page Edit"%>
-<%= link_to("<<Back to list", { :action=>"list", :subject_id => @subject.id }, :class=>"back-link") %>
+<%= link_to("<<Back to list", { :action=>"list", :story_id => @story.id }, :class=>"back-link") %>
 <div class="page edit">
 	<h2>Update Page</h2>
-	<%= form_for(:page, :url=> { :action=>"update", :id=>@page.id, :subject_id => @subject.id } ) do |f| %>
+	<%= form_for(:page, :url=> { :action=>"update", :id=>@page.id, :story_id => @story.id } ) do |f| %>
 		<%= render(:partial=>"form", :locals=>{:f=>f} )%>
 		<div class="form-buttons">
 			<%= submit_tag("Update Page") %>
