--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,8 +1,8 @@
 <% @page_title = "Page New"%>
-<%= link_to("<<Back to list", {:action=>"list", :subject_id => @subject.id }, :class=>"back-link") %>
+<%= link_to("<<Back to list", {:action=>"list", :story_id => @story.id }, :class=>"back-link") %>
 <div class="page new">
 	<h2>Create Page</h2>
-	<%= form_for(:page, :url=> { :action=>"create", :subject_id => @page.subject_id } ) do |f| %>
+	<%= form_for(:page, :url=> { :action=>"create", :story_id => @page.story_id } ) do |f| %>
 		<%= render(:partial=>"form", :locals => {:f=>f} )%>
 		<div class="form-buttons">
 			<%= submit_tag("Create Subject") %>
