--- a/app/views/access/menu.html.erb
+++ b/app/views/access/menu.html.erb
@@ -6,6 +6,7 @@
 		<li><%= link_to("Manage Content", :controller=>"stories") %></li>
 		<li><%= link_to("Manage Documents", :controller=>"documents") %></li>
 		<li><%= link_to("Manage Admin Users", :controller=>"admin_users") %></li>
+		<li><%= link_to("Go to Public site", :controller=>"public") %></li>
 		<li><%= link_to("Logout", :action=>"logout") %></li>
 		<% # ak uvediem len kontroler bez akcie, tak RoR siahne be default akcii Index %>
 	</ul>
