--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New document</h1>
+<div id="upperblock">
+	<p style="float: left;">New document</p>
+	<p style="float: right;">
+		<%= link_to 'Back', documents_path %>
+	</p>
+	
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', documents_path %>
