--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,7 +12,7 @@
 <body>
 	<div id="header">
 		<div class="logo"><%= image_tag("rails.png", {:size=>"25x32", :alt=>"Rails logo"}) %></div>
-		<h1>Simple CMS Admin</h1>
+		<h1>sophia edm</h1>
 	</div>
 	
 	<div id="main">		
@@ -24,7 +24,7 @@
 		</div>
 	</div> <!-- END DIV id="main" -->
 	<div id="footer">
-		<p id="copyright">&copy; myCMS | Michael SOPIRA</p>
+		<p id="copyright">&copy; eDMsophia | michael SOPIRA</p>
 	</div> <!-- END DIV id="footer" -->
 	<%= debug(params) %>
 	<%= debug(session) %>
