--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -27,7 +27,10 @@
 	</div> <!-- END DIV id="main" -->
 	
 	<div id="footer">
-		<p id="copyright">&copy; myCMS | Michael SOPIRA</p>
+		<p id="copyright">
+			<%= link_to("Admin", {:controller => "access", :action=>"menu"}, :class=>"back-link") %>
+			&copy; myCMS | Michael SOPIRA
+		</p>
 		<%#= debug(params) %>
 	</div> <!-- END DIV id="footer" -->
 </body>
