--- a/app/views/stories/list.html.erb
+++ b/app/views/stories/list.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = "Story List"%>
 <%= link_to("<<Back to Menu", {:controller => "access", :action=>"menu"}, :class=>"back-link") %>
 <div class="story list">
-	<h2>Storys</h2>
+	<h2>Storie	s</h2>
 	<%= link_to("Add new Story", {:action=>"new"}, :class=>"action new round") %>
 	<%= link_to("Update Storys", {:action => "update_all", 
 									:page => params[:page], 
