--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,9 +1,24 @@
 <div id="upperblock">
-	<p style="float: left;">New document</p>
+	<p style="float: left;">New document:  <%=  @document_count %> </p>
 	<p style="float: right;">
 		<%= link_to 'Back', documents_path %>
 	</p>
 	
 </div>
 
-<%= render 'form' %>
+<div id="leftblock">
+	<h2>Create Document Story</h2>
+	<%= form_for(:document, :url=> {:action=>"create"}) do |f| %>
+	
+		<%= render(:partial=>"form", :locals=>{:f=>f} )%>
+		<div class="form-buttons">
+			<%= submit_tag("Create Document") %>
+		</div>
+	<% end %>
+</div>
+
+<div id="rightblock">
+	<iframe 								src="http://docs.google.com/gview?url=http://dl.dropbox.com/u/1143421/MailAttachments/Ebay_Laky.pdf&embedded=true" width=640 height=500  frameborder="0">
+	</iframe>
+</div>
+
