--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "Page List"%>
 <%= link_to("<<Back to Stories list", { 	:controller => "stories",
-											:action		=> "list", 
+											:action		=> "index", 
 											:page 		=> session[:story_page], 
 											:sort 		=> session[:story_sort], 
 											:direction 	=> session[:story_direction],
