--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "Section Show"%>
 
-<%= link_to("<<Back to list", {:action=>"list", :page_id => @page.id }, :class=>"back-link") %>
+<%= link_to("<<Back to list", {:action=>"index", :page_id => @page.id }, :class=>"back-link") %>
 <div class = "section show">
 	<h2>Show Section</h2>
 	<table summary="Section detail view">
