--- a/app/views/stories/_index_table.html.erb
+++ b/app/views/stories/_index_table.html.erb
@@ -34,7 +34,7 @@
 																:direction => params[:direction],
 																:search => params[:search] },	 
 																:class=>"action delete round center") %>
-			<%= link_to("Pages", {:controller=>"pages", 		:action=>"list", 
+			<%= link_to("Pages", {:controller=>"pages", 		:action=>"index", 
 																:story_id => story.id , 
 																:page => params[:page],
 																:sort => params[:sort], 
