--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,64 +1,62 @@
-<%= error_messages_for (@document) %>
-
-<div id="leftblock">
-<%= form_for(:document) do |f| %>  
-  <div class="field">
+<div class="field">
     <%= f.label :id_group %>
     <%= f.text_field :id_group, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_company %>
     <%= f.text_field :id_company, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_sender %>
-    <%= f.text_field :id_sender, :size => "32" %>
+    <%= f.collection_select ( :document, :id_sender, 
+					Partner.all(:order => "name"), :id, :name,
+					{ :prompt => "---------Select sender----------",
+					:selected => [@document.id_sender] },
+					{ :include_blank => true, 
+					:multiple => false, 
+					:size => 1 ,
+					:style => "width:235px" } )
+	%>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_recipient %>
-    <%= f.text_field :id_recipient, :size => "32" %>
+    <%= f.select 	:id_recipient, 
+					Partner.all(:order => "name").collect { |s| [s.name, s.id] },
+					{ :prompt => "---------Select recipient----------",
+					:selected => [@document.id_recipient] },
+					{ :include_blank => true, 
+					:multiple => false, 
+					:size => 1 ,
+					:style => "width:235px" }
+	%>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_payer %>
     <%= f.text_field :id_payer, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_beneficiary %>
     <%= f.text_field :id_beneficiary, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_project %>
     <%= f.text_field :id_project, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :id_doctype %>
     <%= f.text_field :id_doctype, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :filename_original %>
     <%= f.text_field :filename_original, :size => "32" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :content %>
     <%= f.text_area :content, :size => "40x2" %>
   </div>
-  <div class="field">
+<div class="field">
     <%= f.label :docdate %>
     <%= f.date_select :docdate %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-</div>
 
-<div id="rightblock">
-	<div id="docviewer">
-	<iframe name=”StatPage” src="http://docs.google.com/gview?url=http://dl.dropbox.com/u/1143421/MailAttachments/Ebay_Laky.pdf&embedded=true" width=0 height=0 style=”display:none”>
-	</iframe>
-
-	<iframe 	src="http://docs.google.com/gview?url=http://dl.dropbox.com/u/1143421/MailAttachments/Ebay_Laky.pdf&embedded=true" width=640 height=500  frameborder="0">
-	</iframe>
-	</div>
-</div>
 
