--- a/app/views/pages/_index_table.html.erb
+++ b/app/views/pages/_index_table.html.erb
@@ -17,7 +17,7 @@
 			<%= link_to("Show", {:action=>"show", :id => page.id, :story_id => params[:story_id] }, :class=>"action show round center")       %>
 	    	<%= link_to("Edit", {:action=>"edit", :id => page.id, :story_id => params[:story_id] }, :class=>"action edit round center")       %>
 	    	<%= link_to("Delete", {:action=>"delete", :id => page.id, :story_id => params[:story_id] }, :class=>"action delete round center") %>
-			<%= link_to("Sections", {:controller=>"sections", :action=>"list", :page_id => page.id }, :class=>"action show round center")%>
+			<%= link_to("Sections", {:controller=>"sections", :action=>"index", :page_id => page.id }, :class=>"action show round center")%>
 		</td>
 	</tr>
 	<% end %>
